# Agnitraai

./: .gitignore  .mintignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  agnitra_enhanced_demo.ipynb  benchmark_runner.py  demo.py  docs.json  getting-started.json  graph_ir.json  mint.json  notes.yaml  prepare_tinyllama.py  pyproject.toml  results_tinyllama.json  setup.py  telemetry.json  telemetry_train.json  telemetry_val.json  tinyllama.info.json
.agnitra/notebook-kernels/: notebook_vector_add.py
.github/ISSUE_TEMPLATE/: benchmark_handicap.yml  bug_report.yml  feature_request.yml
.github/scripts/: check_benchmark_regression.py
.github/workflows/: benchmark.yml  ci.yml
agnitra/: __init__.py  cli.py  sdk.py  telemetry_collector.py
agnitra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agnitra/_sdk/: __init__.py  optimizer.py
agnitra/api/: app.py  auth.py  cli.py  queue.py  service.py
agnitra/benchmarks/: __init__.py  runner.py
agnitra/core/: __init__.py
agnitra/core/ir/: __init__.py  graph_extractor.py
agnitra/core/kernel/: __init__.py  kernel_generator.py
agnitra/core/kernel/examples/: layer_norm_kernel.py  matmul_kernel.py  vector_add_kernel.py
agnitra/core/notifications/: __init__.py  webhook_notifier.py
agnitra/core/optimizer/: __init__.py  llm_optimizer.py  openevolve_adapter.py  pass_registry.py  rl_optimizer.py
agnitra/core/rl/: __init__.py  codex_guided.py
agnitra/core/runtime/: __init__.py  agent.py  cache.py  control_plane.py  fingerprint.py  heartbeat.py  runtime_patcher.py  telemetry_client.py  validation.py
agnitra/dashboard/: app.py  cli.py
agnitra/dashboard/templates/: dashboard.html
agnitra/demo/: demo.py
agnitra/integrations/: __init__.py  accelerate_helpers.py  huggingface.py  langchain.py  llama_index.py  tensorrt_llm.py
agnitra/optimizers/: __init__.py  detection.py  registry.py
agnitra/optimizers/decoder_lm/: __init__.py  _passes.py  _quantization.py  gemma.py  llama.py  mistral.py  qwen2.py
agnitra/sdk/: __init__.py  optimizer.py
agnitra/trust/: __init__.py  digest.py  errors.py  keys.py  manifest.py  sign.py  verify.py
agnitraai/context/: layer_log_tinyllama.json  profile_result_tinyllama.json
benchmarks/: README.md
benchmarks/llama3_h100/: Dockerfile  README.md  RESULTS.md  bootstrap.sh  common.py  compare.py  modal_runner.py  requirements.txt  run.sh  schema.py  workload.py
benchmarks/llama3_h100/runners/: _hf_base.py  agnitra_runner.py  hf.py  tensorrt_llm.py  torch_compile.py  vllm_runner.py
cli/: main.py  profile.py
context/: index.json  layer_log_tinyllama.json  layer_log_toy.json  profile_result_test_toy_model.json  profile_result_tinyllama.json  profile_result_toy.json  telemetry_test.json  telemetry_tinyllama_infer.json  telemetry_tinyllama_train.json  test_toy_model.pt
demo_artifacts/: llm_optimizer_report.json  llm_optimizer_summary.txt
deploy/cloudformation/: aws-marketplace.yaml
deploy/helm/agnitra-marketplace/: Chart.yaml  values.yaml
deploy/helm/agnitra-marketplace/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml.tpl
deploy/terraform/aws_marketplace/: README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/azure_marketplace/: README.md  main.tf  outputs.tf  variables.tf
deploy/terraform/gcp_marketplace/: README.md  main.tf  outputs.tf  variables.tf
docs/: cli-guide.md  cli.mdx  codex-code-summary.txt  docs-deployment.md  docs.mdx  getting-started.md  getting-started.mdx  index.md  index.mdx  javascript-sdk.mdx  monetization_flows.md  non_interactive_codex_usage.txt  operations.mdx  persistent_errors.md  prd.md  publishing.md  python-sdk.mdx  quickstart.mdx  responses_api.md  responses_api.mdx  telemetry.mdx  ui_ux_handoff.md
docs/guides/: cli-and-sdk.mdx  marketplace.mdx  nvidia.mdx  telemetry.mdx  trust.mdx
docs/intro/: architecture.mdx  quickstart.mdx
docs/reference/: configuration.mdx  control-plane.mdx  responses-api.mdx
examples/: quickstart.py  quickstart_hf.py  quickstart_langchain.py  quickstart_llama_index.py
internal-docs/: advanced.md  codex-code-summary.txt  docs-deployment.mdx  monetization_flows.mmd  non_interactive_codex_usage.txt  prd.md  product_design_handoff.md  publishing.mdx  responses_api.mdx  ui_ux_handoff.md
js/: README.md  package.json  tsconfig.json
js/src/: client.ts  errors.ts  index.ts  types.ts
reports/: python-environment.txt  testing-report.md
skills/agnitra/: SKILL.md
tests/: conftest.py  test_agentic_api.py  test_architecture_fingerprint.py  test_cli_click.py  test_collect_telemetry.py  test_decoder_lm_quantization.py  test_decoder_lm_specialist.py  test_demo_integration.py  test_demo_notebook.py  test_infrastructure_artifacts.py  test_integrations_accelerate.py  test_integrations_huggingface.py  test_integrations_langchain.py  test_integrations_llama_index.py  test_integrations_tensorrt_llm.py  test_kernel_generator.py  test_llm_optimizer.py  test_model_loader.py  test_openevolve_adapter.py  test_optimizer.py  test_optimizers_detection.py  test_quantization_modes.py  test_rl_optimizer.py  test_runtime_agent.py  test_runtime_patcher.py  test_trust.py  test_validation.py
tests/dashboard/: test_dashboard_app.py  test_dashboard_snapshots.py
tests/dashboard/__snapshots__/: dashboard_api_snapshot.json
