[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agnitra"
version = "0.1.0"
description = "Agnitra project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
# OpenAI client for LLM-based suggestions
openai = [
    "openai>=1.0.0",
    "httpx>=0.23",
]
# Reinforcement learning extras for the demo tuner
rl = [
    "stable-baselines3>=2.0",
    "gymnasium>=0.28",
]
# Optional NVML bindings for GPU telemetry (not required for CPU-only)
nvml = [
    "pynvml>=11.0.0",
]
marketplace = [
    "boto3>=1.28.0",
    "httpx>=0.24.0",
    "google-auth>=2.23.0",
    "requests>=2.31.0",
]

[project.scripts]
agnitra = "agnitra.cli:main"
agnitra-optimize = "agnitra.cli:main"
agnitra-dashboard = "agnitra.dashboard.cli:run_dashboard"
agnitra-api = "agnitra.api.cli:run_api"

[tool.setuptools.packages.find]
where = ["."]
include = ["agnitra*", "cli*"]

[tool.setuptools.package-data]
"agnitra.dashboard" = ["templates/*.html"]
