[build-system]
# tomli is needed by setup.py on Python <3.11 (which ships tomllib in stdlib).
# Without this pin, `pip install -e .` fails with ModuleNotFoundError on 3.9/3.10.
requires = ["setuptools>=61.0", "tomli; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[project]
name = "agnitra"
version = "0.2.3"
description = "Inference optimizer for decoder-only LLMs. One-line drop-in for HuggingFace models."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Agnitra Labs", email = "support@agnitra.ai" },
]
keywords = [
    "machine-learning",
    "mlops",
    "optimization",
    "gpu",
    "telemetry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    # torch is required for every optimizer call. The package import itself
    # works without it (PEP 562 __getattr__ in agnitra/__init__.py), but
    # any real use needs torch, so we declare it as a base dependency.
    # Users who want CPU-only torch can `pip install --index-url
    # https://download.pytorch.org/whl/cpu torch` separately first; pip
    # will treat the requirement as satisfied.
    "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/agnitraai/agnitraai"
Documentation = "https://github.com/agnitraai/agnitraai#readme"
Repository = "https://github.com/agnitraai/agnitraai"
Issues = "https://github.com/agnitraai/agnitraai/issues"

[project.optional-dependencies]
# OpenAI client for LLM-based suggestions
openai = [
    "openai>=1.0.0",
    "httpx>=0.23",
]
# Reinforcement learning extras for the demo tuner
rl = [
    "stable-baselines3>=2.0",
    "gymnasium>=0.28",
]
# Optional NVML bindings for GPU telemetry (not required for CPU-only)
nvml = [
    "pynvml>=11.0.0",
]
# INT8 weight-only quantization via torchao — the optimization that
# actually beats HuggingFace baseline on decoder LLMs.
quantize = [
    "torchao>=0.5.0",
]
# Cryptographic trust layer: signed inference manifests for regulated
# deployments (Layer 1 of the trust roadmap). See agnitra/trust/.
trust = [
    "cryptography>=42.0",
]

[project.scripts]
agnitra = "agnitra.cli:main"
agnitra-optimize = "agnitra.cli:main"
agnitra-api = "agnitra.api.cli:run_api"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agnitra*", "cli*"]

[tool.setuptools.package-data]
"agnitra" = ["py.typed"]
